Bug 504959 - KWin Crash in KWin::ColorManagementOutputV1::ColorManagementOutputV1 when changing display outputs
Summary: KWin Crash in KWin::ColorManagementOutputV1::ColorManagementOutputV1 when cha...
Status: RESOLVED FIXED
Alias: None
Product: kwin
Classification: Plasma
Component: generic-crash (other bugs)
Version First Reported In: 6.4.4
Platform: openSUSE Linux
: VHI crash
Target Milestone: ---
Assignee: KWin default assignee
URL:
Keywords: drkonqi, multiscreen
: 507710 508200 508557 508582 508622 508701 508784 508805 508809 508832 508834 508841 508853 508876 508917 509004 509159 509377 509836 509914 (view as bug list)
Depends on:
Blocks:
 
Reported: 2025-05-29 13:09 UTC by Jure Repinc
Modified: 2025-10-17 10:07 UTC (History)
28 users (show)

See Also:
Latest Commit:
Version Fixed/Implemented In: 6.4.5
Sentry Crash Report:


Attachments
New crash information added by DrKonqi (71.85 KB, text/plain)
2025-05-29 13:09 UTC, Jure Repinc
Details
GDB report (79.11 KB, text/plain)
2025-08-31 21:28 UTC, Alberto
Details

Note You need to log in before you can comment on or make changes to this bug.
Description Jure Repinc 2025-05-29 13:09:07 UTC
Application: kwin_wayland (6.4.80)

ApplicationNotResponding [ANR]: false
Qt Version: 6.9.0
Frameworks Version: 6.15.0
Operating System: Linux 6.14.6-1-default x86_64
Windowing System: Wayland
Distribution: "openSUSE Tumbleweed"
DrKonqi: 6.4.80 [CoredumpBackend]

-- Information about the crash:
I have two displays connected to PC, one directly to GPU and one via Audio/vide Reciever to TV. When I switched AVR the displays output configuration changed and KWin crashed. When that happened a couple of notifications (general not related to KWin) was displayed

KWin details
==========================

Version
=======
KWin version: 6.4.80
Qt Version: 6.9.0
Qt compile version: 6.9.0
XCB compile version: 1.17.0

Operation Mode: Wayland

Build Options
=============
KWIN_BUILD_DECORATIONS: yes
KWIN_BUILD_TABBOX: yes
KWIN_BUILD_ACTIVITIES: yes
HAVE_X11_XCB: yes

X11
===
Vendor: SUSE LINUX
Vendor Release: 12401006
Protocol Version/Revision: 11/0
SHAPE: yes; Version: 0x11
RANDR: yes; Version: 0x14
Composite: yes; Version: 0x4
RENDER: yes; Version: 0xb
XFIXES: yes; Version: 0x50
SYNC: yes; Version: 0x31
RES: yes; Version: 0x12

Decoration
==========
Plugin: org.kde.breeze
Theme: Sapica
Plugin recommends border size: None
onAllDesktopsAvailable: true
alphaChannelSupported: true
closeOnDoubleClickOnMenu: false
decorationButtonsLeft: 
decorationButtonsRight: 
borderSize: 0
gridUnit: 12
font: Noto Sans,13,-1,5,400,0,0,0,0,0,0,0,0,0,0,1,Display Regular
smallSpacing: 3
largeSpacing: 12

Output backend
==============
Name: DRM
Atomic Mode Setting on GPU 0: true

Cursor
======
themeName: breeze_cursors
themeSize: 24

Options
=======
focusPolicy: ClickToFocus
xwaylandCrashPolicy: 1
xwaylandMaxCrashCount: 3
nextFocusPrefersMouse: false
clickRaise: true
autoRaise: false
autoRaiseInterval: 0
delayFocusInterval: 0
shadeHover: false
shadeHoverInterval: 250
separateScreenFocus: true
placement: 5
activationDesktopPolicy: SwitchToOtherDesktop
focusPolicyIsReasonable: true
borderSnapZone: 10
windowSnapZone: 10
centerSnapZone: 0
snapOnlyWhenOverlapping: false
edgeBarrier: 100
cornerBarrier: 1
rollOverDesktops: true
focusStealingPreventionLevel: 1
operationTitlebarDblClick: 5009
operationMaxButtonLeftClick: 5000
operationMaxButtonMiddleClick: 5015
operationMaxButtonRightClick: 5014
commandActiveTitlebar1: MouseRaise
commandActiveTitlebar2: MouseNothing
commandActiveTitlebar3: MouseOperationsMenu
commandInactiveTitlebar1: MouseActivateAndRaise
commandInactiveTitlebar2: MouseNothing
commandInactiveTitlebar3: MouseOperationsMenu
commandWindow1: MouseActivateRaiseOnReleaseAndPassClick
commandWindow2: MouseActivateAndPassClick
commandWindow3: MouseActivateAndPassClick
commandWindowWheel: MouseNothing
commandAll1: MouseUnrestrictedMove
commandAll2: MouseToggleRaiseAndLower
commandAll3: MouseUnrestrictedResize
keyCmdAllModKey: 16777251
doubleClickBorderToMaximize: true
condensedTitle: false
electricBorderMaximize: true
electricBorderTiling: true
electricBorderCornerRatio: 0.25
borderlessMaximizedWindows: false
killPingTimeout: 5000
compositingMode: 1
allowTearing: true
interactiveWindowMoveEnabled: true

Screen Edges
============
desktopSwitching: false
desktopSwitchingMovingClients: false
cursorPushBackDistance: 1x1
actionTopLeft: 0
actionTop: 0
actionTopRight: 0
actionRight: 0
actionBottomRight: 0
actionBottom: 0
actionBottomLeft: 0
actionLeft: 0

Screens
=======
Number of Screens: 2

Screen 0:
---------
Name: DP-2
Enabled: 1
Geometry: 0,380,1120x700
Physical size: 450x280mm
Scale: 1.5
Refresh Rate: 59954
Adaptive Sync: incapable
Screen 1:
---------
Name: HDMI-A-1
Enabled: 1
Geometry: 1120,0,1920x1080
Physical size: 1872x1053mm
Scale: 2
Refresh Rate: 60000
Adaptive Sync: incapable

Compositing
===========
Compositing is active
Compositing Type: OpenGL
OpenGL vendor string: AMD
OpenGL renderer string: AMD Radeon RX 7900 GRE (radeonsi, navi31, LLVM 20.1.4, DRM 3.61, 6.14.6-1-default)
OpenGL version string: 4.6 (Core Profile) Mesa 25.1.1
OpenGL platform interface: EGL
OpenGL shading language version string: 4.60
Driver: Unknown
GPU class: Unknown
OpenGL version: 4.6
GLSL version: 4.60
Mesa version: 25.1.1
Linux kernel version: 6.14.6
Direct rendering: Requires strict binding: no
Virtual Machine:  no
OpenGL 2 Shaders are used

Loaded Effects:
---------------
shakecursor
screenshot
outputlocator
colorpicker
zoom
screenedge
blur
contrast
sessionquit
logout
login
slidingpopups
windowaperture
slide
squash
scale
maximize
fullscreen
frozenapp
fadingpopups
dimscreen
dialogparent
windowview
tileseditor
overview
highlightwindow
blendchanges
startupfeedback
systembell
screentransform
kscreen

Currently Active Effects:
-------------------------
blur
contrast

Effect Settings:
----------------
shakecursor:

screenshot:

outputlocator:

colorpicker:

zoom:
zoomFactor: 1.2
mousePointer: 0
mouseTracking: 0
focusTrackingEnabled: false
textCaretTrackingEnabled: false
focusDelay: 350
moveFactor: 20
targetZoom: 1

screenedge:

blur:

contrast:

sessionquit:
pluginId: sessionquit
isActiveFullScreenEffect: false

logout:
pluginId: logout
isActiveFullScreenEffect: false

login:
pluginId: login
isActiveFullScreenEffect: false

slidingpopups:
slideInDuration: 100
slideOutDuration: 100

windowaperture:
pluginId: windowaperture
isActiveFullScreenEffect: false

slide:
horizontalGap: 45
verticalGap: 20
slideBackground: true

squash:
pluginId: squash
isActiveFullScreenEffect: false

scale:
pluginId: scale
isActiveFullScreenEffect: false

maximize:
pluginId: maximize
isActiveFullScreenEffect: false

fullscreen:
pluginId: fullscreen
isActiveFullScreenEffect: false

frozenapp:
pluginId: frozenapp
isActiveFullScreenEffect: false

fadingpopups:
pluginId: fadingpopups
isActiveFullScreenEffect: false

dimscreen:
pluginId: dimscreen
isActiveFullScreenEffect: false

dialogparent:
pluginId: dialogparent
isActiveFullScreenEffect: false

windowview:
activeView: 
delegate: 
animationDuration: 150
ignoreMinimized: false
mode: 
partialActivationFactor: 0
gestureInProgress: false
searchText: 
selectedIds: 

tileseditor:
activeView: 
delegate: 
animationDuration: 200

overview:
activeView: 
delegate: 
animationDuration: 150
ignoreMinimized: false
filterWindows: true
organizedGrid: true
overviewPartialActivationFactor: 0
overviewGestureInProgress: false
transitionPartialActivationFactor: 0
transitionGestureInProgress: false
gridPartialActivationFactor: 0
gridGestureInProgress: false
desktopOffset: 
searchText: 

highlightwindow:

blendchanges:

startupfeedback:
type: 1

systembell:

screentransform:

kscreen:


Loaded Plugins:
---------------
BounceKeysPlugin
KeyNotificationPlugin
MouseKeysPlugin
StickyKeysPlugin
TouchpadShortcutsPlugin
buttonsrebind
eis
krunnerintegration
nightlight
screencast

Available Plugins:
------------------
BounceKeysPlugin
KeyNotificationPlugin
MouseKeysPlugin
StickyKeysPlugin
TouchpadShortcutsPlugin
buttonsrebind
eis
krunnerintegration
nightlight
screencast

The reporter is unsure if this crash is reproducible.

-- Backtrace (Reduced):
#5  0x00007f17c216e9fd in KWin::ColorManagementOutputV1::ColorManagementOutputV1 (this=0x557bda1cb3d0, client=<optimized out>, id=<optimized out>, version=1, output=0x0) at /usr/src/debug/kwin-6.3.80git.20250522T181708~42aa42af/src/wayland/colormanagement_v1.cpp:580
#6  KWin::ColorManagerV1::wp_color_manager_v1_get_output (this=<optimized out>, resource=<optimized out>, id=<optimized out>, output=<optimized out>) at /usr/src/debug/kwin-6.3.80git.20250522T181708~42aa42af/src/wayland/colormanagement_v1.cpp:63
#7  0x00007f17bd447b62 in ffi_call_unix64 () at ../src/x86/unix64.S:104
#8  0x00007f17bd4443eb in ffi_call_int (cif=cif@entry=0x7ffefb0cb0b0, fn=<optimized out>, rvalue=<optimized out>, avalue=<optimized out>, closure=closure@entry=0x0) at ../src/x86/ffi64.c:676
#9  0x00007f17bd44716e in ffi_call (cif=cif@entry=0x7ffefb0cb0b0, fn=<optimized out>, rvalue=rvalue@entry=0x0, avalue=avalue@entry=0x7ffefb0cb180) at ../src/x86/ffi64.c:713
#10 0x00007f17c0c0d448 in wl_closure_invoke (closure=closure@entry=0x557bdc174e30, target=<optimized out>, target@entry=0x557bdb725f60, opcode=opcode@entry=1, data=<optimized out>, data@entry=0x557bda29a3d0, flags=2) at ../src/connection.c:1228
#11 0x00007f17c0c11b5a in wl_client_connection_data (fd=<optimized out>, mask=<optimized out>, data=0x557bda29a3d0) at ../src/wayland-server.c:444
#12 0x00007f17c0c101e2 in wl_event_loop_dispatch (loop=0x557bd9231270, timeout=<optimized out>) at ../src/event-loop.c:1105
#13 0x00007f17c2175532 in KWin::Display::dispatchEvents (this=<optimized out>) at /usr/src/debug/kwin-6.3.80git.20250522T181708~42aa42af/src/wayland/display.cpp:138
#14 0x00007f17bf2181e1 in QtPrivate::QSlotObjectBase::call (this=0x557bda19aaa0, r=<optimized out>, a=0x7ffefb0cb7b0, this=<optimized out>, r=<optimized out>, a=<optimized out>) at /usr/src/debug/qtbase-everywhere-src-6.9.0/src/corelib/kernel/qobjectdefs_impl.h:461
#15 doActivate<false> (sender=0x557bda5b3b10, signal_index=3, argv=0x7ffefb0cb7b0) at /usr/src/debug/qtbase-everywhere-src-6.9.0/src/corelib/kernel/qobject.cpp:4138
[...]
#17 QSocketNotifier::activated (this=this@entry=0x557bda5b3b10, _t1=..., _t2=<optimized out>, _t3=...) at /usr/src/debug/qtbase-everywhere-src-6.9.0/build/src/corelib/Core_autogen/include/moc_qsocketnotifier.cpp:161
#18 0x00007f17bf21c1de in QSocketNotifier::event (this=0x557bda5b3b10, e=<optimized out>) at /usr/src/debug/qtbase-everywhere-src-6.9.0/src/corelib/kernel/qsocketnotifier.cpp:327
#19 0x00007f17c05e142a in QApplicationPrivate::notify_helper (this=<optimized out>, receiver=0x557bda5b3b10, e=0x7ffefb0cb8e0) at /usr/src/debug/qtbase-everywhere-src-6.9.0/src/widgets/kernel/qapplication.cpp:3301
#20 0x00007f17bf1b7568 in QCoreApplication::notifyInternal2 (receiver=0x557bda5b3b10, event=0x7ffefb0cb8e0) at /usr/src/debug/qtbase-everywhere-src-6.9.0/src/corelib/kernel/qcoreapplication.cpp:1106
#21 0x00007f17bf332a54 in QEventDispatcherUNIXPrivate::activateSocketNotifiers (this=this@entry=0x557bd9166300) at /usr/src/debug/qtbase-everywhere-src-6.9.0/src/corelib/kernel/qeventdispatcher_unix.cpp:254


Reported using DrKonqi
Comment 1 Jure Repinc 2025-05-29 13:09:08 UTC
Created attachment 181865 [details]
New crash information added by DrKonqi

DrKonqi auto-attaching complete backtrace.
Comment 2 TraceyC 2025-05-29 19:27:33 UTC
Searchable backtrace

Thread 1 (Thread 0x7f17babf6040 (LWP 267677)):
[KCrash Handler]
#5  0x00007f17c216e9fd in KWin::ColorManagementOutputV1::ColorManagementOutputV1 (this=0x557bda1cb3d0, client=<optimized out>, id=<optimized out>, version=1, output=0x0) at /usr/src/debug/kwin-6.3.80git.20250522T181708~42aa42af/src/wayland/colormanagement_v1.cpp:580
#6  KWin::ColorManagerV1::wp_color_manager_v1_get_output (this=<optimized out>, resource=<optimized out>, id=<optimized out>, output=<optimized out>) at /usr/src/debug/kwin-6.3.80git.20250522T181708~42aa42af/src/wayland/colormanagement_v1.cpp:63
#7  0x00007f17bd447b62 in ffi_call_unix64 () at ../src/x86/unix64.S:104
#8  0x00007f17bd4443eb in ffi_call_int (cif=cif@entry=0x7ffefb0cb0b0, fn=<optimized out>, rvalue=<optimized out>, avalue=<optimized out>, closure=closure@entry=0x0) at ../src/x86/ffi64.c:676
#9  0x00007f17bd44716e in ffi_call (cif=cif@entry=0x7ffefb0cb0b0, fn=<optimized out>, rvalue=rvalue@entry=0x0, avalue=avalue@entry=0x7ffefb0cb180) at ../src/x86/ffi64.c:713
#10 0x00007f17c0c0d448 in wl_closure_invoke (closure=closure@entry=0x557bdc174e30, target=<optimized out>, target@entry=0x557bdb725f60, opcode=opcode@entry=1, data=<optimized out>, data@entry=0x557bda29a3d0, flags=2) at ../src/connection.c:1228
#11 0x00007f17c0c11b5a in wl_client_connection_data (fd=<optimized out>, mask=<optimized out>, data=0x557bda29a3d0) at ../src/wayland-server.c:444
#12 0x00007f17c0c101e2 in wl_event_loop_dispatch (loop=0x557bd9231270, timeout=<optimized out>) at ../src/event-loop.c:1105
#13 0x00007f17c2175532 in KWin::Display::dispatchEvents (this=<optimized out>) at /usr/src/debug/kwin-6.3.80git.20250522T181708~42aa42af/src/wayland/display.cpp:138
#14 0x00007f17bf2181e1 in QtPrivate::QSlotObjectBase::call (this=0x557bda19aaa0, r=<optimized out>, a=0x7ffefb0cb7b0, this=<optimized out>, r=<optimized out>, a=<optimized out>) at /usr/src/debug/qtbase-everywhere-src-6.9.0/src/corelib/kernel/qobjectdefs_impl.h:461
#15 doActivate<false> (sender=0x557bda5b3b10, signal_index=3, argv=0x7ffefb0cb7b0) at /usr/src/debug/qtbase-everywhere-src-6.9.0/src/corelib/kernel/qobject.cpp:4138
#16 0x00007f17bf21b5fa in QMetaObject::activate<void, QSocketDescriptor, QSocketNotifier::Type, QSocketNotifier::QPrivateSignal> (sender=0x557bda5b3b10, mo=<optimized out>, local_signal_index=0, ret=0x0) at /usr/src/debug/qtbase-everywhere-src-6.9.0/src/corelib/kernel/qobjectdefs.h:306
#17 QSocketNotifier::activated (this=this@entry=0x557bda5b3b10, _t1=..., _t2=<optimized out>, _t3=...) at /usr/src/debug/qtbase-everywhere-src-6.9.0/build/src/corelib/Core_autogen/include/moc_qsocketnotifier.cpp:161
#18 0x00007f17bf21c1de in QSocketNotifier::event (this=0x557bda5b3b10, e=<optimized out>) at /usr/src/debug/qtbase-everywhere-src-6.9.0/src/corelib/kernel/qsocketnotifier.cpp:327
#19 0x00007f17c05e142a in QApplicationPrivate::notify_helper (this=<optimized out>, receiver=0x557bda5b3b10, e=0x7ffefb0cb8e0) at /usr/src/debug/qtbase-everywhere-src-6.9.0/src/widgets/kernel/qapplication.cpp:3301
#20 0x00007f17bf1b7568 in QCoreApplication::notifyInternal2 (receiver=0x557bda5b3b10, event=0x7ffefb0cb8e0) at /usr/src/debug/qtbase-everywhere-src-6.9.0/src/corelib/kernel/qcoreapplication.cpp:1106
#21 0x00007f17bf332a54 in QEventDispatcherUNIXPrivate::activateSocketNotifiers (this=this@entry=0x557bd9166300) at /usr/src/debug/qtbase-everywhere-src-6.9.0/src/corelib/kernel/qeventdispatcher_unix.cpp:254
#22 0x00007f17bf333425 in QEventDispatcherUNIX::processEvents (this=<optimized out>, flags=..., flags@entry=...) at /usr/src/debug/qtbase-everywhere-src-6.9.0/src/corelib/kernel/qeventdispatcher_unix.cpp:470
#23 0x00007f17bfebf161 in QUnixEventDispatcherQPA::processEvents (this=<optimized out>, flags=...) at /usr/src/debug/qtbase-everywhere-src-6.9.0/src/gui/platform/unix/qunixeventdispatcher.cpp:27
#24 0x00007f17bf1c23db in QEventLoop::exec (this=0x7ffefb0cbab0, flags=...) at /usr/src/debug/qtbase-everywhere-src-6.9.0/src/corelib/global/qflags.h:77
#25 0x00007f17bf1bad5c in QCoreApplication::exec () at /usr/src/debug/qtbase-everywhere-src-6.9.0/src/corelib/global/qflags.h:77
#26 0x00007f17bfa14650 in QGuiApplication::exec () at /usr/src/debug/qtbase-everywhere-src-6.9.0/src/gui/kernel/qguiapplication.cpp:1993
#27 0x00007f17c05dd959 in QApplication::exec () at /usr/src/debug/qtbase-everywhere-src-6.9.0/src/widgets/kernel/qapplication.cpp:2568
#28 0x0000557bab8b24b3 in main (argc=<optimized out>, argv=<optimized out>) at /usr/src/debug/kwin-6.3.80git.20250522T181708~42aa42af/src/main_wayland.cpp:635
Comment 3 Vlad Zahorodnii 2025-05-30 13:15:49 UTC
Git commit e1fd647b979df7f0bd10065932a614a2aa806e87 by Vlad Zahorodnii.
Committed on 30/05/2025 at 12:57.
Pushed by vladz into branch 'master'.

wayland: Make ColorManagementOutputV1 handle output removal better

wl_output removal is racy. The compositor can remove the underlying
handle but the corresponding wl_output object may still linger for a
while.

If that happens, the ColorManagementOutputV1 must not attempt to
dereference the handle object.
SENTRY: KWIN-CKJ

M  +16   -6    src/wayland/colormanagement_v1.cpp
M  +3    -4    src/wayland/colormanagement_v1.h

https://invent.kde.org/plasma/kwin/-/commit/e1fd647b979df7f0bd10065932a614a2aa806e87
Comment 4 TraceyC 2025-08-04 17:35:39 UTC
*** Bug 507710 has been marked as a duplicate of this bug. ***
Comment 5 David Edmundson 2025-08-13 16:23:33 UTC
*** Bug 508200 has been marked as a duplicate of this bug. ***
Comment 6 David Edmundson 2025-08-13 22:13:07 UTC
Git commit 598438b9bcb9487c9dc85e4eb5f84e3b73a71051 by David Edmundson.
Committed on 13/08/2025 at 16:25.
Pushed by davidedmundson into branch 'Plasma/6.4'.

wayland: Make ColorManagementOutputV1 handle output removal better

wl_output removal is racy. The compositor can remove the underlying
handle but the corresponding wl_output object may still linger for a
while.

If that happens, the ColorManagementOutputV1 must not attempt to
dereference the handle object.
SENTRY: KWIN-CKJ


(cherry picked from commit e1fd647b979df7f0bd10065932a614a2aa806e87)

Co-authored-by: Vlad Zahorodnii <vlad.zahorodnii@kde.org>

M  +16   -6    src/wayland/colormanagement_v1.cpp
M  +3    -4    src/wayland/colormanagement_v1.h

https://invent.kde.org/plasma/kwin/-/commit/598438b9bcb9487c9dc85e4eb5f84e3b73a71051
Comment 7 TraceyC 2025-08-21 22:25:15 UTC
*** Bug 508557 has been marked as a duplicate of this bug. ***
Comment 8 thecaptain 2025-08-22 03:24:59 UTC
This causes my desktop (and all of my applications) to crash nearly every time I turn my monitors on or off, or switch between the outputs cables.

I think moving this up to 6.4.5 would be warranted, rather than waiting two months for such a serious bug fix to make it out in 6.5.0.

(I've dealt with a lot of hotplugging issues in KDE Plasma in the last couple of years, and this is definitely the worst. Particularly because it affects simply pressing the power button on a screen.)
Comment 9 TraceyC 2025-08-22 20:44:02 UTC
*** Bug 508582 has been marked as a duplicate of this bug. ***
Comment 10 TraceyC 2025-08-25 17:28:38 UTC
*** Bug 508622 has been marked as a duplicate of this bug. ***
Comment 11 TraceyC 2025-08-25 20:18:10 UTC
*** Bug 508701 has been marked as a duplicate of this bug. ***
Comment 12 Nate Graham 2025-08-26 22:10:41 UTC
*** Bug 508784 has been marked as a duplicate of this bug. ***
Comment 13 Nate Graham 2025-08-27 15:11:05 UTC
*** Bug 508809 has been marked as a duplicate of this bug. ***
Comment 14 Nate Graham 2025-08-27 15:13:15 UTC
*** Bug 508805 has been marked as a duplicate of this bug. ***
Comment 15 kdebugs 2025-08-28 14:41:51 UTC
I believe this is the same bug affecting me with my Display Port displays going to sleep. Does anyone know when this is planned to be patched? I hope it's not 6.5, it's a critical bug with guaranteed data loss that's triggered by normal usage.
Comment 16 Nate Graham 2025-08-28 14:50:10 UTC
As the "Version Fixed In:" field says, it'll be in Plasma 6.4.5.

https://community.kde.org/Schedules/Plasma_6#Future_releases says that's schedule to be released on August 9th.
Comment 17 Nate Graham 2025-08-28 16:15:29 UTC
*** Bug 508853 has been marked as a duplicate of this bug. ***
Comment 18 Nate Graham 2025-08-28 16:43:22 UTC
*** Bug 508841 has been marked as a duplicate of this bug. ***
Comment 19 Nate Graham 2025-08-28 16:43:33 UTC
*** Bug 508834 has been marked as a duplicate of this bug. ***
Comment 20 Nate Graham 2025-08-28 16:43:48 UTC
*** Bug 508832 has been marked as a duplicate of this bug. ***
Comment 21 David Edmundson 2025-08-29 08:58:23 UTC
*** Bug 508876 has been marked as a duplicate of this bug. ***
Comment 22 Alberto 2025-08-31 21:28:50 UTC
Created attachment 184616 [details]
GDB report

Hello David, I applied your patch, and it successfully fixed this crash which, in my case, was triggered when unplugging USB-C hub with a second monitor connected. This bug was 100% reproducible on my system.
https://src.fedoraproject.org/rpms/kwin/pull-request/19

By the way despite having applied the patch, I experienced again a single crash that concerns ColorManagementOutputV1, I attach the crashreport here
Comment 23 TraceyC 2025-09-03 15:06:31 UTC
*** Bug 508917 has been marked as a duplicate of this bug. ***
Comment 24 TraceyC 2025-09-03 16:12:19 UTC
*** Bug 509004 has been marked as a duplicate of this bug. ***
Comment 25 Zamundaaa 2025-09-05 23:45:11 UTC
*** Bug 509159 has been marked as a duplicate of this bug. ***
Comment 26 TraceyC 2025-09-16 00:54:46 UTC
*** Bug 509377 has been marked as a duplicate of this bug. ***
Comment 27 Nate Graham 2025-09-23 17:15:36 UTC
*** Bug 509836 has been marked as a duplicate of this bug. ***
Comment 28 David Edmundson 2025-09-25 09:29:12 UTC
*** Bug 509914 has been marked as a duplicate of this bug. ***
Comment 29 Zamundaaa 2025-10-17 10:07:36 UTC
*** Bug 508917 has been marked as a duplicate of this bug. ***