wayland: Make ColorManagementOutputV1 handle output removal better

wl_output removal is racy. The compositor can remove the underlying
handle but the corresponding wl_output object may still linger for a
while.

If that happens, the ColorManagementOutputV1 must not attempt to
dereference the handle object.

BUG: 504959
SENTRY: KWIN-CKJ